--- a/style.css
+++ b/style.css
@@ -1,210 +1,143 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&display=swap');
 
-$firaSans: 'Fira Sans', sans-serif;
+$transition-time: 2.3s;
 
-html {
-  box-sizing: border-box;
-  font-size: 100%;
+body{
+	font-family: 'Oswald', sans-serif;
+	background-color: #212121;
+	section{
+		width: 90%;
+		max-width: 1200px;
+		margin: 0 auto;
+		.row{
+			align-items: center;
+    	height: 100vh;
+		}
+	}
 }
-
-html,
-body {
-  height: 100%;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-body {
-  -webkit-text-size-adjust: 100%;
-  font-variant-ligatures: none;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-size: 100%;
-  font-family: $firaSans;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-weight: 800;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  color: #1F1D42;
-  background-color: #F0F8E1;
-}
-
-.card-hover {
-  $root: &;
-  width: 360px;
-  height: 500px;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 0 32px -10px rgba(0,0,0,0.08);
-
-  &:has(#{$root}__link:hover) {
-
-    #{$root}__extra {
-      transform: translateY(0);
-      transition: transform 0.35s;
-    }
-  }
-
-  &:hover {
-   
-    #{$root} {
-
-      &__content {
-        background-color: #DEE8C2;
-        bottom: 100%;
-        transform: translateY(100%);
-        padding: 50px 60px;
-        transition: all 0.35s cubic-bezier(.1,.72,.4,.97);
-      }
-
-      &__link {
-        opacity: 1;
-        transform: translate(-50%, 0);
-        transition: all 0.3s 0.35s cubic-bezier(.1,.72,.4,.97);
-      }
-    }
-
-    img {
-      transform: scale(1);
-      transition: 0.35s 0.1s transform cubic-bezier(.1,.72,.4,.97);
-    }
-  }
-
-  &__content {
-    width: 100%;
-    text-align: center;
-    background-color: #86B971;
-    padding: 0 60px 50px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transform: translateY(0);
-    transition: all 0.35s 0.35s cubic-bezier(.1,.72,.4,.97);
-    will-change: bottom, background-color, transform, padding;
-    z-index: 1;
-
-    &::before,
-    &::after {
-      content: '';
-      width: 100%;
-      height: 120px;
-      background-color: inherit;
-      position: absolute;
-      left: 0;
-      z-index: -1;
-    }
-
-    &::before {
-      top: -80px;
-      clip-path: ellipse(60% 80px at bottom center);
-    }
-
-    &::after {
-      bottom: -80px;
-      clip-path: ellipse(60% 80px at top center);
-    }
-  }
-
-  &__title {
-    font-size: 1.5rem;
-    margin-bottom: 1em;
-
-    span {
-      color: #2d7f0b;
-    }
-  }
-
-  &__text {
-    font-size: 0.75rem;
-  }
-
-  &__link {
-    position: absolute;
-    bottom: 1rem;
-    left: 50%;
-    transform: translate(-50%, 10%);
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    text-decoration: none;
-    color: #2d7f0b;
-    opacity: 0;
-    padding: 10px;
-    transition: all 0.35s;
-
-    &:hover {
-      
-      svg {
-        transform: translateX(4px);
-      }
-    }
-
-    svg {
-      width: 18px;
-      margin-left: 4px;
-      transition: transform 0.3s;
-    }
-  }
-
-  &__extra {
-    height: 50%;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    font-size: 1.5rem;
-    text-align: center;
-    background-color: #86b971;
-    padding: 80px;
-    bottom: 0;
-    z-index: 0;
-    color: #dee8c2;
-    transform: translateY(100%);
-    will-change: transform;
-    transition: transform 0.35s;
-
-    span {
-      color: #2d7f0b;
-    }
-  }
-
-  img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    z-index: -1;
-    transform: scale(1.2);
-    transition: 0.35s 0.35s transform cubic-bezier(.1,.72,.4,.97);
-  }
+.card{
+	position: relative;
+	height: 400px;
+	width: 100%;
+	margin: 10px 0;
+	transition: ease all $transition-time;
+	perspective: 1200px;
+	&:hover{
+		.cover{
+			transform: rotateX(0deg) rotateY(-180deg);
+			&:before{
+				transform: translateZ(30px);
+			}
+			&:after{
+				background-color: black;
+			}
+			h1{
+				transform: translateZ(100px);
+			}
+			.price{
+				transform: translateZ(60px);
+			}
+			a{
+				transform: translateZ(-60px) rotatey(-180deg);
+			}
+		}
+	}
+	
+	.cover{
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		transform-style: preserve-3d;
+  	transition: ease all $transition-time;
+		background-size: cover;
+		background-position: center center;
+		background-repeat: no-repeat;
+		&:before{
+			content: '';
+			position: absolute;
+			border: 5px solid rgba(255,255,255,.5);
+			box-shadow: 0 0 12px rgba(0,0,0,.3); 
+			top:20px;
+			left:20px;
+			right:20px;
+			bottom:20px;
+			z-index: 2;
+			transition: ease all $transition-time;
+			transform-style: preserve-3d;
+			transform: translateZ(0px);
+		}
+		&:after{
+			content: '';
+			position: absolute;
+			top:0px;
+			left:0px;
+			right:0px;
+			bottom:0px;
+			z-index: 2;
+			transition: ease all 1.3s;
+			background: rgba(0,0,0,.4);
+		}
+		&.item-a{
+			background-image: url('https://images.unsplash.com/photo-1520412099551-62b6bafeb5bb?auto=format&fit=crop&w=600&q=80');
+		}
+		&.item-b{
+			background-image: url('https://images.unsplash.com/photo-1497250681960-ef046c08a56e?auto=format&fit=crop&w=600&q=80');
+		}
+		&.item-c{
+			background-image: url('https://images.unsplash.com/photo-1525945518069-b924046d1385?auto=format&fit=crop&w=600&q=80');
+		}
+		h1{
+			font-weight: 600;
+			position: absolute;
+			bottom: 55px;
+			left: 50px;
+			color: white;
+			transform-style: preserve-3d;
+  		transition: ease all $transition-time;
+			z-index:3;
+			font-size: 3em;
+			transform: translateZ(0px);
+		}
+		.price{
+			font-weight: 200;
+			position: absolute;
+			top: 55px;
+			right: 50px;
+			color: white;
+			transform-style: preserve-3d;
+  		transition: ease all $transition-time;
+			z-index:4;
+			font-size: 2em;
+			transform: translateZ(0px);
+		}
+	}
+	.card-back{
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		background: #0b0f08;
+		transform-style: preserve-3d;
+  	transition: ease all $transition-time;
+		transform: translateZ(-1px);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		a{
+			transform-style: preserve-3d;
+			transition: ease transform $transition-time, ease background .5s;
+			transform: translateZ(-1px) rotatey(-180deg);
+			background: transparent;
+			border: 1px solid white;
+			font-weight: 200;
+			font-size: 1.3em;
+			color: white;
+			padding: 14px 32px;
+			outline: none;
+			text-decoration: none;
+			&:hover{
+				background-color: white;
+				color: #0b0f08;
+			}
+		}
+	}
 }
