--- a/style.css
+++ b/style.css
@@ -1,143 +1,84 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&display=swap');
-
-$transition-time: 2.3s;
-
-body{
-	font-family: 'Oswald', sans-serif;
-	background-color: #212121;
-	section{
-		width: 90%;
-		max-width: 1200px;
-		margin: 0 auto;
-		.row{
-			align-items: center;
-    	height: 100vh;
-		}
-	}
+* {
+  box-sizing: border-box;
 }
-.card{
-	position: relative;
-	height: 400px;
-	width: 100%;
-	margin: 10px 0;
-	transition: ease all $transition-time;
-	perspective: 1200px;
-	&:hover{
-		.cover{
-			transform: rotateX(0deg) rotateY(-180deg);
-			&:before{
-				transform: translateZ(30px);
-			}
-			&:after{
-				background-color: black;
-			}
-			h1{
-				transform: translateZ(100px);
-			}
-			.price{
-				transform: translateZ(60px);
-			}
-			a{
-				transform: translateZ(-60px) rotatey(-180deg);
-			}
-		}
-	}
-	
-	.cover{
-		position: absolute;
-		height: 100%;
-		width: 100%;
-		transform-style: preserve-3d;
-  	transition: ease all $transition-time;
-		background-size: cover;
-		background-position: center center;
-		background-repeat: no-repeat;
-		&:before{
-			content: '';
-			position: absolute;
-			border: 5px solid rgba(255,255,255,.5);
-			box-shadow: 0 0 12px rgba(0,0,0,.3); 
-			top:20px;
-			left:20px;
-			right:20px;
-			bottom:20px;
-			z-index: 2;
-			transition: ease all $transition-time;
-			transform-style: preserve-3d;
-			transform: translateZ(0px);
-		}
-		&:after{
-			content: '';
-			position: absolute;
-			top:0px;
-			left:0px;
-			right:0px;
-			bottom:0px;
-			z-index: 2;
-			transition: ease all 1.3s;
-			background: rgba(0,0,0,.4);
-		}
-		&.item-a{
-			background-image: url('https://images.unsplash.com/photo-1520412099551-62b6bafeb5bb?auto=format&fit=crop&w=600&q=80');
-		}
-		&.item-b{
-			background-image: url('https://images.unsplash.com/photo-1497250681960-ef046c08a56e?auto=format&fit=crop&w=600&q=80');
-		}
-		&.item-c{
-			background-image: url('https://images.unsplash.com/photo-1525945518069-b924046d1385?auto=format&fit=crop&w=600&q=80');
-		}
-		h1{
-			font-weight: 600;
-			position: absolute;
-			bottom: 55px;
-			left: 50px;
-			color: white;
-			transform-style: preserve-3d;
-  		transition: ease all $transition-time;
-			z-index:3;
-			font-size: 3em;
-			transform: translateZ(0px);
-		}
-		.price{
-			font-weight: 200;
-			position: absolute;
-			top: 55px;
-			right: 50px;
-			color: white;
-			transform-style: preserve-3d;
-  		transition: ease all $transition-time;
-			z-index:4;
-			font-size: 2em;
-			transform: translateZ(0px);
-		}
-	}
-	.card-back{
-		position: absolute;
-		height: 100%;
-		width: 100%;
-		background: #0b0f08;
-		transform-style: preserve-3d;
-  	transition: ease all $transition-time;
-		transform: translateZ(-1px);
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		a{
-			transform-style: preserve-3d;
-			transition: ease transform $transition-time, ease background .5s;
-			transform: translateZ(-1px) rotatey(-180deg);
-			background: transparent;
-			border: 1px solid white;
-			font-weight: 200;
-			font-size: 1.3em;
-			color: white;
-			padding: 14px 32px;
-			outline: none;
-			text-decoration: none;
-			&:hover{
-				background-color: white;
-				color: #0b0f08;
-			}
-		}
-	}
+
+body {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+}
+
+.card {
+  --blur: 16px;
+  --size: clamp(300px, 50vmin, 600px);
+  width: var(--size);
+  aspect-ratio: 4 / 3;
+  position: relative;
+  border-radius: 2rem;
+  overflow: hidden;
+  color: #000;
+  transform: translateZ(0);
+}
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(calc(1 + (var(--hover, 0) * 0.25))) rotate(calc(var(--hover, 0) * -5deg));
+  transition: transform 0.2s;
+}
+
+.card__footer {
+  padding: 0 1.5rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: red;
+  display: grid;
+  grid-template-row: auto auto;
+  gap: 0.5ch;
+  background: hsl(0 0% 100% / 0.5);
+  backdrop-filter: blur(var(--blur));
+  height: 30%;
+  align-content: center;
+}
+
+.card__action {
+  position: absolute;
+  aspect-ratio: 1;
+  width: calc(var(--size) * 0.15);
+  bottom: 30%;
+  right: 1.5rem;
+  transform: translateY(50%)
+    translateY(
+      calc(
+        (var(--size) * 0.4)
+      )
+    )
+    translateY(calc(var(--hover, 0) * (var(--size) * -0.4)));
+  background: purple;
+  display: grid;
+  place-items: center;
+  border-radius: 0.5rem;
+  background: hsl(0 0% 100% / 0.5);
+/*   backdrop-filter: blur(calc(var(--blur) * 0.5)); */
+  transition: transform 0.2s;
+}
+
+.card__action svg {
+  aspect-ratio: 1;
+  width: 50%;
+}
+
+.card__footer span:nth-of-type(1) {
+  font-size: calc(var(--size) * 0.065);
+}
+
+.card__footer span:nth-of-type(2) {
+  font-size: calc(var(--size) * 0.035);
+}
+
+.card:is(:hover, :focus-visible) {
+  --hover: 1;
 }
