--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: darkgray;
+  background-color: darkblue;
   display: grid;
   place-items: center;
   min-height: 100vh;
