--- a/style.css
+++ b/style.css
@@ -4,9 +4,16 @@
 
 body {
   background-color: darkblue;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  gap: 1rem; /* Space between cards */
 }
 
 .card {
